Fixed UI. hid scrollbar, dynamically added times to timeblocks

--- a/style.css
+++ b/style.css
@@ -13,6 +13,41 @@ textarea {
     padding: 10px;
 }
 
+#timeblocks {
+    max-height: 60vh;
+    overflow-y: hidden;
+    scrollbar-width: 0px;
+}
+
+#timeblocks::-webkit-scrollbar {
+    display: none;
+}
+
+.jumbotron {
+    text-align: center;
+    background-color: transparent;
+    color: black;
+    border-radius: 0;
+    border-bottom: 10px solid black;
+    padding-bottom: 0;
+    padding-top: 0;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    line-height: 1;
+}
+
+textarea {
+    background: transparent;
+    border: none;
+    resize: none;
+    color: #000000;
+    border-left: 1px solid black;
+    padding: 10px;
+}
+
 .jumbotron {
     text-align: center;
     background-color: transparent;
@@ -84,4 +119,8 @@ textarea {
 #covid {
     color: yellowgreen;
     font-family: cursive;
+}
+
+div.nine>div.hour {
+    background-color: blue;
 }
